<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradientw"
    tools:context="com.example.akash.bmiapp.Main2Activity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#898989"
        android:textColorHint="#898989"
        android:hint="@string/heightenter"
        android:ems="15"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/heightInput" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/weightenter"
        android:gravity="center"
        android:textColor="#898989"
        android:textColorHint="#898989"
        android:ems="15"
        android:layout_below="@+id/heightInput"
        android:layout_marginTop="43dp"
        android:id="@+id/weightInput"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="calBMI"
        android:id="@+id/button2" />

    <TextView
        android:text="@string/urbmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#898989"
        android:textSize="25sp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:id="@+id/urBMI" />

    <TextView
        android:text="@string/urres"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textColor="#898989"
        android:id="@+id/urResult"
        android:layout_below="@+id/urBMI"
        android:layout_alignStart="@+id/urBMI" />
</RelativeLayout>
